creating nav links

--- a/jobs/index.html
+++ b/jobs/index.html
@@ -15,7 +15,7 @@
         <h1 class="text-4xl font-extrabold tracking-tight text-left text-gray-900 sm:text-5xl md:text-6xl md:text-center">
             <span class="block">We Appreciate Your&nbsp;<span class="block mt-1 text-purple-500 lg:inline lg:mt-0" data-primary="purple-500">Enthusiam!</span></span>
         </h1>
-        <p class="w-full mx-auto text-base text-left text-gray-500 md:max-w-md sm:text-lg lg:text-2xl md:max-w-3xl md:text-center">We're happy that you share our excitement! CaribOpps is still being built and will be with you shortly.&nbsp;</p>
+        <p class="w-full mx-auto text-base text-left text-gray-500 md:max-w-md sm:text-lg lg:text-2xl md:max-w-3xl md:text-center">We are happy that you share our excitement! CaribOpps is still being built and will be with you shortly.&nbsp;</p>
         <div class="relative flex flex-col justify-center md:flex-row md:space-x-4">
             <a href="#_" class="flex items-center w-full px-6 py-3 mb-3 text-lg text-white bg-purple-500 rounded-md md:mb-0 hover:bg-purple-700 md:w-auto" data-primary="purple-500" data-rounded="rounded-md">SignUp For Updates</a>
             
