--- a/index.html
+++ b/index.html
@@ -2091,9 +2091,7 @@
                     <div class="max-w-sm mx-auto lg:mr-0 lg:ml-auto">
                         <div class="overflow-hidden text-center bg-white rounded-md shadow-sm">
                             <div class="px-6 py-8 xl:bg-purple-800">
-                                <form
-                                    action="https://hooks.airtable.com/workflows/v1/genericWebhook/app28lflsp83s9Zra/wflz2hMMBtq6bhqpR/wtrtWpI9yx7aQ8Hxb"
-                                    method="POST" data-bitwarden-watching="1" class="">
+                                <form action="https://hooks.airtable.com/workflows/v1/genericWebhook/app28lflsp83s9Zra/wflz2hMMBtq6bhqpR/wtrtWpI9yx7aQ8Hxb" method="POST" data-bitwarden-watching="1" class="">
                                     <div class="mb-6">
                                         <span class="text-sm font-semibold text-gray-300 xl:text-white">Fill out your
                                             info below to</span>
@@ -2147,9 +2145,9 @@
     <section class="bg-white">
         <div class="max-w-screen-xl px-4 py-12 mx-auto space-y-8 overflow-hidden sm:px-6 lg:px-8">
             <nav class="flex flex-wrap justify-center -mx-5 -my-2">
-                <div class="px-4 py-2">
+                <!-- <div class="px-4 py-2">
                     <a href="#home" class="text-base leading-6 text-gray-500 hover:text-gray-900">Home</a>
-                </div>
+                </div>-->
                 <div class="px-4 py-2">
                     <a href="#about" class="text-base leading-6 text-gray-500 hover:text-gray-900">About</a>
                 </div>
