--- a/index.html
+++ b/index.html
@@ -2091,10 +2091,9 @@
                     <div class="max-w-sm mx-auto lg:mr-0 lg:ml-auto">
                         <div class="overflow-hidden text-center bg-white rounded-md shadow-sm">
                             <div class="px-6 py-8 xl:bg-purple-800">
-                                <form action="https://hooks.airtable.com/workflows/v1/genericWebhook/app28lflsp83s9Zra/wflz2hMMBtq6bhqpR/wtrtWpI9yx7aQ8Hxb" method="POST" data-bitwarden-watching="1" class="">
+                                <form action="https://hooks.airtable.com/workflows/v1/genericWebhook/app28lflsp83s9Zra/      wflz2hMMBtq6bhqpR/wtrtWpI9yx7aQ8Hxb" method="POST" data-bitwarden-watching="1" class="">
                                     <div class="mb-6">
-                                        <span class="text-sm font-semibold text-gray-300 xl:text-white">Fill out your
-                                            info below to</span>
+                                        <span class="text-sm font-semibold text-gray-300 xl:text-white">Fill out your info below to</span>
                                         <h4 class="text-2xl font-semibold text-gray-700 xl:text-white">Sign-Up</h4>
                                     </div>
                                     <div class="flex flex-wrap mb-4 -mx-2">
@@ -2118,9 +2117,7 @@
                                     </select>
                                     <input class="font-serif py-2.5 px-4 mb-4 w-full bg-gray-50 border focus:ring-2 focus:ring-opacity-90 focus:ring-indigo-500 border-gray-100 rounded focus:outline-none" required="" type="email" id="email" name="email" placeholder="and my email address is..."> 
 
-                                    <button
-                                        class="w-full py-3 mb-4 font-bold text-white bg-indigo-600 rounded hover:bg-indigo-500 xl:bg-purple-600">Sign
-                                        Me Up!</button>
+                                    <button class="w-full py-3 mb-4 font-bold text-white bg-indigo-600 rounded hover:bg-indigo-500 xl:bg-purple-600">Sign Me Up!</button>
                                 </form>
                                 <p class="text-xs text-gray-400">
 
