--- a/index.html
+++ b/index.html
@@ -2115,8 +2115,7 @@
                                         <option value="I'm from...">from...</option>
                                         <option value="St. Lucia">St. Lucia</option>
                                     </select>
-                                    <input class="font-serif py-2.5 px-4 mb-4 w-full bg-gray-50 border focus:ring-2 focus:ring-opacity-90 focus:ring-indigo-500 border-gray-100 rounded focus:outline-none" required="" type="email" id="email" name="email" placeholder="and my email address is..."> 
-
+                                    <input class="font-serif py-2.5 px-4 mb-4 w-full bg-gray-50 border focus:ring-2 focus:ring-opacity-90 focus:ring-indigo-500 border-gray-100 rounded focus:outline-none" type="email" id="email" name="email" placeholder="and my email address is..." required> 
                                     <button class="w-full py-3 mb-4 font-bold text-white bg-indigo-600 rounded hover:bg-indigo-500 xl:bg-purple-600">Sign Me Up!</button>
                                 </form>
                                 <p class="text-xs text-gray-400">
