Linking top CTA

--- a/index.html
+++ b/index.html
@@ -1877,7 +1877,7 @@
                 <h1 class="mb-8 text-5xl font-extrabold text-white sm:text-6xl lg:text-7xl">Fall In Love With Mondays
                     Again!</h1>
 
-                <a href="#_"
+                <a href="#contact"
                     class="inline-flex items-center justify-center w-full px-6 py-4 mb-3 mr-1 text-base font-semibold text-white no-underline align-middle bg-purple-600 border border-transparent border-solid rounded-md cursor-pointer select-none sm:max-w-xl sm:mb-0 lg:w-auto hover:bg-purple-500 hover:text-white focus-within:bg-blue-700 focus-within:border-blue-700">
                     <span class="">Sign-Up For Updates!</span>
                     <span class="ml-1 text-sm font-light"> - It's Free</span>
@@ -2091,7 +2091,7 @@
                     <div class="max-w-sm mx-auto lg:mr-0 lg:ml-auto">
                         <div class="overflow-hidden text-center bg-white rounded-md shadow-sm">
                             <div class="px-6 py-8 xl:bg-purple-800">
-                                <form action="https://hooks.airtable.com/workflows/v1/genericWebhook/app28lflsp83s9Zra/      wflz2hMMBtq6bhqpR/wtrtWpI9yx7aQ8Hxb" method="POST" data-bitwarden-watching="1" class="">
+                                <form action="https://hooks.airtable.com/workflows/v1/genericWebhook/app28lflsp83s9Zra/      wflz2hMMBtq6bhqpR/wtrtWpI9yx7aQ8Hxb" method="POST">
                                     <div class="mb-6">
                                         <span class="text-sm font-semibold text-gray-300 xl:text-white">Fill out your info below to</span>
                                         <h4 class="text-2xl font-semibold text-gray-700 xl:text-white">Sign-Up</h4>
