--- a/index.html
+++ b/index.html
@@ -1911,7 +1911,7 @@
                 <p class=""></p>
             </div>
         </div>
-        <div id="features" class="tails-hover-element">section</div>
+        <div id="features" class="tails-hover-element"></div>
     </section>
      <!-- About - End -->
 
@@ -1977,7 +1977,7 @@
                         </div>
                         <div class="">
                             <h3 class="mb-2 text-lg font-semibold text-white md:text-xl">Simplicity</h3>
-                            <p class="mb-2 text-sm text-blue-50">Favorite job postings for later and track applications
+                            <p class="mb-2 text-sm text-blue-50">Favorite job posts for later and track applications
                                 with ease in one place.</p>
                         </div>
                     </div>
@@ -1998,8 +1998,8 @@
                         </div>
                         <div class="">
                             <h3 class="mb-2 text-lg font-semibold text-white md:text-xl">Stand Out!</h3>
-                            <p class="mb-2 text-sm text-blue-50 2xl:text-white">Create a personalized rofile to attract
-                                iring managers.</p>
+                            <p class="mb-2 text-sm text-blue-50 2xl:text-white">Create a personalized profile to attract
+                                hiring managers.</p>
                         </div>
                     </div>
                 </div>
@@ -2062,8 +2062,8 @@
                         </div>
                         <div class="">
                             <h3 class="mb-2 text-lg font-semibold text-white md:text-xl">Empowering Hiring Managers</h3>
-                            <p class="mb-2 text-sm text-red-50">We aim to giive hiring managers the power to take charge
-                                of the candidate search with our user-friendly candidate searching tools.</p>
+                            <p class="mb-2 text-sm text-red-50">We aim to give hiring managers the power to take charge
+                                of the candidate search journey with our user-friendly candidate searching tools.</p>
                         </div>
                     </div>
                 </div>
