--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>CaribOpps</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
 
-    <link rel="shortcut icon" type="image/x-icon"
-        href="data:image/svg+xml,&lt;svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22&gt;&lt;text y=%22.9em%22 font-size=%2290%22&gt;👬&lt;/text&gt;&lt;/svg&gt;">
+    <!-- <link rel="shortcut icon" type="image/x-icon"
+        href="data:image/svg+xml,&lt;svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22&gt;&lt;text y=%22.9em%22 font-size=%2290%22&gt;👬&lt;/text&gt;&lt;/svg&gt;">-->
 
     <style>
         /* ! tailwindcss v3.2.6 | MIT License | https://tailwindcss.com */
