--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CaribOpps</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
     <!-- <link rel="shortcut icon" type="image/x-icon"
         href="data:image/svg+xml,&lt;svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22&gt;&lt;text y=%22.9em%22 font-size=%2290%22&gt;👬&lt;/text&gt;&lt;/svg&gt;">-->
@@ -2077,6 +2077,8 @@
     <!-- Contact - Start -->
     <section id="contact" class="py-20 bg-gray-50 xl:bg-purple-800 xl:bg-gradient-to-r xl:from-transparent">
         <div class="px-10 mx-auto max-w-7xl">
+            <img src="https://cdn.devdojo.com/images/july2021/block-pattern.png"
+                class="absolute inset-0 object-cover w-full h-full opacity-30">
             <div class="flex flex-wrap items-center justify-center">
                 <div class="max-w-sm mb-16 lg:mb-0 lg:max-w-2xl lg:w-1/2 lg:px-4">
                     <a class="inline-block mb-6 text-3xl font-bold leading-none" href="#">
